force-app/main/default/objects/Category_Rate_Override__c/Category_Rate_Override__c.object-meta.xml
<CustomObject>
    <description>Defines rate overrides by product, category, deal size, or custom criteria for an incentive plan.</description>
    <label>Category Rate Override</label>
    <nameField><label>Category Rate Override Name</label><type>Text</type></nameField>
    <pluralLabel>Category Rate Overrides</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>