force-app/main/default/objects/Category_Rate_Override__c/fields/Counts_Toward_Attainment__c.field-meta.xml
<CustomField>
    <fullName>Counts_Toward_Attainment__c</fullName>
    <label>Counts Toward Attainment</label>
    <defaultValue>true</defaultValue>
    <type>Checkbox</type>
</CustomField>