force-app/main/default/objects/Category_Rate_Override__c/fields/Custom_Field__c.field-meta.xml
<CustomField>
    <fullName>Custom_Field__c</fullName>
    <label>Custom Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>