force-app/main/default/objects/Category_Rate_Override__c/fields/Custom_Field_Value__c.field-meta.xml
<CustomField>
    <fullName>Custom_Field_Value__c</fullName>
    <label>Custom Field Value</label>
    <length>200</length>
    <type>Text</type>
</CustomField>