force-app/main/default/objects/Category_Rate_Override__c/fields/Deal_Size_Max__c.field-meta.xml
<CustomField>
    <fullName>Deal_Size_Max__c</fullName>
    <label>Deal Size Max</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>