force-app/main/default/objects/Category_Rate_Override__c/fields/Override_Type__c.field-meta.xml
<CustomField>
    <fullName>Override_Type__c</fullName>
    <label>Override Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Transaction_Category</fullName><default>false</default><label>Transaction Category</label></value>
            <value><fullName>Product_Family</fullName><default>false</default><label>Product Family</label></value>
            <value><fullName>Product</fullName><default>false</default><label>Product</label></value>
            <value><fullName>Deal_Size</fullName><default>false</default><label>Deal Size</label></value>
            <value><fullName>Custom_Field</fullName><default>false</default><label>Custom Field</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>