force-app/main/default/objects/Category_Rate_Override__c/fields/Plan_Template__c.field-meta.xml
<CustomField>
    <fullName>Plan_Template__c</fullName>
    <label>Plan Template</label>
    <type>MasterDetail</type>
    <referenceTo>Incentive_Plan_Template__c</referenceTo>
    <relationshipLabel>Rate Overrides</relationshipLabel>
    <relationshipName>Rate_Overrides</relationshipName>
</CustomField>