force-app/main/default/objects/Category_Rate_Override__c/fields/Product_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Id__c</fullName>
    <label>Product</label>
    <type>Lookup</type>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Commission Rate Overrides</relationshipLabel>
    <relationshipName>Commission_Rate_Overrides</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>