force-app/main/default/objects/Category_Rate_Override__c/fields/Rate_Modifier__c.field-meta.xml
<CustomField>
    <fullName>Rate_Modifier__c</fullName>
    <label>Rate Modifier</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Absolute</fullName><default>false</default><label>Absolute</label></value>
            <value><fullName>Additive</fullName><default>false</default><label>Additive</label></value>
            <value><fullName>Multiplier</fullName><default>false</default><label>Multiplier</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>