force-app/main/default/objects/Category_Rate_Override__c/fields/Rate_Pct__c.field-meta.xml
<CustomField>
    <fullName>Rate_Pct__c</fullName>
    <label>Rate Pct</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>