force-app/main/default/objects/Category_Rate_Override__c/fields/Transaction_Category__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Category__c</fullName>
    <label>Transaction Category</label>
    <type>Lookup</type>
    <referenceTo>Transaction_Category__c</referenceTo>
    <relationshipLabel>Rate Overrides</relationshipLabel>
    <relationshipName>Rate_Overrides_Category</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>